[gd_scene load_steps=6 format=3 uid="uid://ca5yka8t45xqs"]

[ext_resource type="Script" uid="uid://ctwylbq1qucg" path="res://world.gd" id="1_kq4et"]
[ext_resource type="PackedScene" uid="uid://dqeyrt7b8tjwi" path="res://player/player.tscn" id="2_tkp1m"]
[ext_resource type="PackedScene" uid="uid://g4qrq6oy2q2p" path="res://enemy/enemy.tscn" id="3_eqedp"]
[ext_resource type="PackedScene" uid="uid://ncklgdw4cpq6" path="res://enemy/enemy_moving.tscn" id="4_aqk2v"]
[ext_resource type="Texture2D" uid="uid://4ebbpbsqbgyp" path="res://FishMap1.png" id="5_036b0"]

[node name="World" type="Node2D"]
script = ExtResource("1_kq4et")

[node name="Player" parent="." instance=ExtResource("2_tkp1m")]
position = Vector2(74, 62)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(718.7999, 225)
scale = Vector2(7, 7)
polygon = PackedVector2Array(-52, -47, -52, -46, -55, -46, -55, -45, -57, -45, -57, -44, -58, -44, -58, -43, -59, -43, -59, -42, -61, -42, -61, -41, -62, -41, -62, -40, -63, -40, -63, -39, -64, -39, -64, -38, -65, -38, -65, -37, -66, -37, -66, -36, -67, -36, -67, -35, -69, -35, -69, -34, -71, -34, -71, -33, -73, -33, -73, -32, -75, -32, -75, -31, -77, -31, -77, -30, -85, -30, -85, -31, -94, -31, -94, -30, -95, -30, -95, -29, -96, -29, -96, -28, -97, -28, -97, -27, -98, -27, -98, -26, -99, -26, -99, -22, -98, -22, -98, -19, -97, -19, -97, -18, -96, -18, -96, -17, -95, -17, -95, -16, -93, -16, -93, -15, -87, -15, -87, -16, -86, -16, -86, -17, -78, -17, -78, -16, -73, -16, -73, -15, -72, -15, -72, -14, -71, -14, -71, -13, -70, -13, -70, -12, -68, -12, -68, -11, -59, -11, -59, -10, -44, -10, -44, -9, -42, -9, -42, -8, -41, -8, -41, -3, -40, -3, -40, 0, -39, 0, -39, 3, -38, 3, -38, 5, -37, 5, -37, 6, -36, 6, -36, 7, -35, 7, -35, 8, -34, 8, -34, 9, -33, 9, -33, 10, -32, 10, -32, 11, -31, 11, -31, 12, -29, 12, -29, 13, -27, 13, -27, 14, -25, 14, -25, 15, -21, 15, -21, 16, -17, 16, -17, 17, -2, 17, -2, 16, -1, 16, -1, 15, 0, 15, 0, 14, 1, 14, 1, 15, 2, 15, 2, 16, 4, 16, 4, 17, 9, 17, 9, 16, 11, 16, 11, 15, 13, 15, 13, 14, 14, 14, 14, 13, 15, 13, 15, 12, 16, 12, 16, 11, 17, 11, 17, 10, 18, 10, 18, 9, 19, 9, 19, 8, 20, 8, 20, 7, 21, 7, 21, 2, 22, 2, 22, 1, 23, 1, 23, 0, 25, 0, 25, -1, 27, -1, 27, -2, 28, -2, 28, -3, 33, -3, 33, -2, 34, -2, 34, -1, 35, -1, 35, 0, 36, 0, 36, 1, 37, 1, 37, 2, 39, 2, 39, 24, 40, 24, 40, 25, 41, 25, 41, 26, 42, 26, 42, 27, 43, 27, 43, 28, 65, 28, 65, 27, 67, 27, 67, 26, 68, 26, 68, 25, 69, 25, 69, 24, 70, 24, 70, 23, 71, 23, 71, 22, 72, 22, 72, 21, 74, 21, 74, 20, 75, 20, 75, 19, 76, 19, 76, 18, 77, 18, 77, 17, 78, 17, 78, 16, 79, 16, 79, 15, 80, 15, 80, 14, 81, 14, 81, 13, 82, 13, 82, 10, 83, 10, 83, 9, 82, 9, 82, 8, 81, 8, 81, 9, 80, 9, 80, 10, 79, 10, 79, 13, 78, 13, 78, 14, 77, 14, 77, 15, 76, 15, 76, 16, 75, 16, 75, 17, 74, 17, 74, 18, 72, 18, 72, 19, 71, 19, 71, 20, 70, 20, 70, 21, 69, 21, 69, 22, 68, 22, 68, 23, 67, 23, 67, 24, 65, 24, 65, 25, 43, 25, 43, 24, 42, 24, 42, 2, 41, 2, 41, 1, 40, 1, 40, 0, 39, 0, 39, -1, 37, -1, 37, -2, 36, -2, 36, -4, 35, -4, 35, -6, 34, -6, 34, -7, 33, -7, 33, -6, 28, -6, 28, -5, 27, -5, 27, -4, 25, -4, 25, -3, 23, -3, 23, -2, 22, -2, 22, -1, 21, -1, 21, 0, 20, 0, 20, 1, 19, 1, 19, 2, 18, 2, 18, 7, 17, 7, 17, 8, 16, 8, 16, 9, 15, 9, 15, 10, 14, 10, 14, 11, 13, 11, 13, 12, 11, 12, 11, 13, 9, 13, 9, 14, 4, 14, 4, 13, 2, 13, 2, 12, 1, 12, 1, 11, 0, 11, 0, 12, -1, 12, -1, 13, -2, 13, -2, 14, -17, 14, -17, 13, -21, 13, -21, 12, -25, 12, -25, 11, -27, 11, -27, 10, -29, 10, -29, 9, -31, 9, -31, 8, -32, 8, -32, 7, -33, 7, -33, 6, -34, 6, -34, 5, -35, 5, -35, 3, -36, 3, -36, 0, -37, 0, -37, -3, -38, -3, -38, -8, -39, -8, -39, -9, -40, -9, -40, -10, -41, -10, -41, -11, -42, -11, -42, -12, -44, -12, -44, -13, -59, -13, -59, -14, -68, -14, -68, -15, -70, -15, -70, -16, -71, -16, -71, -17, -72, -17, -72, -18, -73, -18, -73, -19, -78, -19, -78, -20, -86, -20, -86, -19, -87, -19, -87, -18, -93, -18, -93, -19, -95, -19, -95, -22, -96, -22, -96, -26, -95, -26, -95, -27, -94, -27, -94, -28, -85, -28, -85, -27, -77, -27, -77, -28, -75, -28, -75, -29, -73, -29, -73, -30, -71, -30, -71, -31, -69, -31, -69, -32, -67, -32, -67, -33, -66, -33, -66, -34, -65, -34, -65, -35, -64, -35, -64, -36, -63, -36, -63, -37, -62, -37, -62, -38, -61, -38, -61, -39, -59, -39, -59, -40, -58, -40, -58, -41, -57, -41, -57, -42, -55, -42, -55, -43, -52, -43, -52, -44, -47, -44, -47, -43, -44, -43, -44, -42, -43, -42, -43, -41, -42, -41, -42, -40, -41, -40, -41, -39, -40, -39, -40, -38, -39, -38, -39, -36, -38, -36, -38, -33, -37, -33, -37, -29, -36, -29, -36, -24, -35, -24, -35, -17, -34, -17, -34, -4, -33, -4, -33, -2, -32, -2, -32, 0, -31, 0, -31, 2, -30, 2, -30, 3, -29, 3, -29, 4, -28, 4, -28, 5, -27, 5, -27, 6, -26, 6, -26, 7, -25, 7, -25, 8, -23, 8, -23, 9, -20, 9, -20, 10, -5, 10, -5, 9, -3, 9, -3, 8, -2, 8, -2, 7, -1, 7, -1, 5, -2, 5, -2, 4, -3, 4, -3, 3, -4, 3, -4, -2, -5, -2, -5, -5, -4, -5, -4, -8, -3, -8, -3, -10, -2, -10, -2, -12, -1, -12, -1, -13, 0, -13, 0, -14, 4, -14, 4, -15, 6, -15, 6, -16, 12, -16, 12, -17, 13, -17, 13, -18, 14, -18, 14, -21, 15, -21, 15, -25, 14, -25, 14, -26, 13, -26, 13, -29, 12, -29, 12, -32, 13, -32, 13, -33, 14, -33, 14, -34, 15, -34, 15, -35, 16, -35, 16, -36, 26, -36, 26, -30, 25, -30, 25, -29, 24, -29, 24, -28, 23, -28, 23, -27, 22, -27, 22, -26, 21, -26, 21, -25, 20, -25, 20, -24, 19, -24, 19, -15, 18, -15, 18, -7, 19, -7, 19, -6, 20, -6, 20, -7, 22, -7, 22, -8, 24, -8, 24, -9, 26, -9, 26, -10, 27, -10, 27, -11, 29, -11, 29, -12, 31, -12, 31, -13, 32, -13, 32, -14, 33, -14, 33, -15, 34, -15, 34, -17, 35, -17, 35, -19, 36, -19, 36, -20, 37, -20, 37, -21, 38, -21, 38, -23, 39, -23, 39, -24, 40, -24, 40, -25, 41, -25, 41, -26, 42, -26, 42, -27, 44, -27, 44, -28, 47, -28, 47, -29, 54, -29, 54, -30, 60, -30, 60, -29, 62, -29, 62, -28, 63, -28, 63, -27, 64, -27, 64, -24, 65, -24, 65, -23, 67, -23, 67, -22, 68, -22, 68, -19, 69, -19, 69, -17, 70, -17, 70, -16, 71, -16, 71, -15, 72, -15, 72, -14, 74, -14, 73.88571, -13.857143, 87.88571, -13.714287, 88, -14, 88.02858, -14.1428585, 87.88571, -15, 88, -15, 88, -16, 74, -16, 74, -17, 72, -17, 72, -19, 71, -19, 71, -22, 70, -22, 70, -23, 69, -23, 69, -24, 68, -24, 68, -25, 67, -25, 67, -27, 66, -27, 66, -28, 65, -28, 65, -29, 64, -29, 64, -30, 63, -30, 63, -31, 62, -31, 62, -32, 60, -32, 60, -33, 54, -33, 54, -32, 47, -32, 47, -31, 44, -31, 44, -30, 42, -30, 42, -29, 41, -29, 41, -28, 40, -28, 40, -27, 39, -27, 39, -26, 38, -26, 38, -25, 37, -25, 37, -24, 36, -24, 36, -23, 35, -23, 35, -21, 34, -21, 34, -20, 33, -20, 33, -19, 32, -19, 32, -17, 31, -17, 31, -15, 29, -15, 29, -14, 27, -14, 27, -13, 26, -13, 26, -12, 24, -12, 24, -11, 22, -11, 22, -10, 21, -10, 21, -15, 22, -15, 22, -24, 23, -24, 23, -25, 24, -25, 24, -26, 25, -26, 25, -27, 26, -27, 26, -28, 27, -28, 27, -29, 28, -29, 28, -30, 29, -30, 29, -36, 28, -36, 28, -37, 27, -37, 27, -38, 26, -38, 26, -39, 16, -39, 16, -38, 15, -38, 15, -37, 14, -37, 14, -36, 13, -36, 13, -35, 12, -35, 12, -34, 11, -34, 11, -33, 10, -33, 10, -32, 9, -32, 9, -29, 10, -29, 10, -26, 11, -26, 11, -25, 12, -25, 12, -21, 11, -21, 11, -19, 6, -19, 6, -18, 4, -18, 4, -17, 0, -17, 0, -16, -1, -16, -1, -15, -2, -15, -2, -14, -3, -14, -3, -13, -4, -13, -4, -12, -5, -12, -5, -10, -6, -10, -6, -8, -7, -8, -7, -5, -8, -5, -8, -2, -7, -2, -7, 3, -6, 3, -6, 4, -5, 4, -5, 5, -4, 5, -4, 6, -5, 6, -5, 7, -20, 7, -20, 6, -23, 6, -23, 5, -25, 5, -25, 4, -26, 4, -26, 3, -27, 3, -27, 2, -28, 2, -28, 0, -29, 0, -29, -2, -30, -2, -30, -4, -31, -4, -31, -17, -32, -17, -32, -24, -33, -24, -33, -29, -34, -29, -34, -33, -35, -33, -35, -36, -36, -36, -36, -38, -37, -38, -37, -39, -38, -39, -38, -40, -39, -40, -39, -41, -40, -41, -40, -42, -41, -42, -41, -43, -42, -43, -42, -44, -43, -44, -43, -45, -44, -45, -44, -46, -47, -46, -47, -47)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(717.7999, 226)
scale = Vector2(7, 7)
polygon = PackedVector2Array(72.02857, -8, 72, -8, 71, -8, 71, -7, 70, -7, 70, -6, 69, -6, 69, -5, 68, -5, 68, -4, 67, -4, 67, -3, 66, -3, 66, -2, 65, -2, 65, -1, 63, -1, 63, 0, 62, 0, 62, 1, 59, 1, 59, 2, 49, 2, 49, 3, 48, 3, 48, 17, 49, 17, 49, 18, 50, 18, 50, 19, 51, 19, 51, 20, 64, 20, 64, 19, 65, 19, 65, 18, 66, 18, 66, 17, 67, 17, 67, 16, 68, 16, 68, 15, 69, 15, 69, 14, 70, 14, 70, 13, 71, 13, 71, 12, 72, 12, 72, 11, 73, 11, 73, 9, 74, 9, 74, 8, 75, 8, 75, 7, 76, 7, 76, 5, 75, 5, 75, 4, 74, 4, 74, 5, 73, 5, 73, 7, 72, 7, 72, 8, 71, 8, 71, 9, 70, 9, 70, 11, 69, 11, 69, 12, 68, 12, 68, 13, 67, 13, 67, 14, 66, 14, 66, 15, 65, 15, 65, 16, 64, 16, 64, 17, 51, 17, 51, 5, 59, 5, 59, 4, 62, 4, 62, 3, 63, 3, 63, 2, 65, 2, 65, 1, 66, 1, 66, 0, 67, 0, 67, -1, 68, -1, 68, -2, 69, -2, 69, -3, 70, -3, 70, -4, 71, -4, 71, -5, 72, -5, 72, -6, 88, -6, 88, -7, 88.02857, -7, 88.02857, -8, 88, -8, 87.88572, -8)

[node name="Enemy" parent="." instance=ExtResource("3_eqedp")]
position = Vector2(707, 201)

[node name="Enemy2" parent="." instance=ExtResource("3_eqedp")]
position = Vector2(769, 306)

[node name="Enemy4" parent="." instance=ExtResource("3_eqedp")]
position = Vector2(1182, 148)

[node name="Enemy_Moving" parent="." instance=ExtResource("4_aqk2v")]
position = Vector2(867, 199)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LabelCurLvl" type="Label" parent="CanvasLayer"]
visible = false
offset_right = 153.0
offset_bottom = 49.0
text = "Displayed Level: 
"
metadata/_edit_use_anchors_ = true

[node name="LabelLvl" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 1.0
offset_top = 26.0
offset_right = 122.0
offset_bottom = 61.0
text = "True Level: "
metadata/_edit_use_anchors_ = true

[node name="FishMap1" type="Sprite2D" parent="."]
position = Vector2(717.7999, 227)
scale = Vector2(7, 7)
texture = ExtResource("5_036b0")
